# hip-pytorch-operators

./: CMakeLists.txt  CMakeUserPresets.json  README.md  hip-pytorch-operators.code-workspace  toolchain-linux.cmake
benchmark/: CMakeLists.txt
cmake/: Dependencies.cmake  Summary.cmake
example/: CMakeLists.txt  example_torch_triu.cpp
hip-pytorch-operators/: CMakeLists.txt
test/: CMakeLists.txt  test_hip_api.cpp
